<?xml version="1.0"?>
<package format="2">
    <name>yo_exp1</name>
    <version>1.0.0</version>
    <description>The can_interface package</description>

    <maintainer email="guy.maoz@bw-robotics.com">Guy Maoz</maintainer>
    <license>TODO</license>


    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <depend>cramim_messages</depend>
    <depend>cramim_common</depend>
    <depend>can_msgs</depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <export>
    </export>
</package>
